...
  <string name="about_app_page">about app page</string>
  <string name="menu_wifi_hotspot">WiFi Hotspot</string>
  <string name="save_media">Save Media</string>
  <string name="save_media_error">An error occurred when trying to save the media!</string>
  <string name="invalid_media_source">The selected media is not found.</string>
  <string name="save_media_saved">Saved media to %s</string>
  <string name="search_label">Search</string>
  <string name="searched_list">Searched list</string>
  <string name="more_options">More options</string>
  <string name="choose_file" tools:keep="@string/choose_file">Select a Content File (*.zim)</string>
  <string name="open_in_new_tab">Open link in new tab?</string>
  <string name="hotspot_service_channel_name" tools:keep="@string/hotspot_service_channel_name">Hotspot Service Channel</string>
  <string name="hotspot_failed_title">Failed to start hotspot</string>
...
  <string name="theme_dark">Dark</string>
  <string name="pref_back_to_top">Back to Top</string>
  <string name="pref_back_to_top_summary">Display a button at the end of the page to scroll up to the top</string>
  <string name="pref_language_title">Language</string>
  <string name="user_interface">User Interface</string>
  <string name="system_language_with_name">System language (%s)</string>
  <string name="pref_language_chooser">Choose a language</string>
  <string name="pref_credits">Contributors and Licenses</string>
  <string name="pref_credits_title">Credits</string>
  <string name="tts_lang_not_supported">The language of this page is not supported. The article may not be properly read.</string>
  <string name="no_reader_application_installed">Could not find an installed application for this type of file</string>
  <string name="no_email_application_installed">Please install an email client</string>
  <string name="no_app_found_to_select_bookmark_file">No app found to select a bookmark file</string>
...
  <string name="shortcut_disabled_message">Shortcut not available</string>
  <string name="new_tab_shortcut_label">New tab</string>
  <string name="get_content_shortcut_label" tools:keep="@string/get_content_shortcut_label">Get content</string>
  <string name="fav_icon">Favicon</string>
  <string name="articleCount" tools:keep="@string/articleCount">%s articles</string>
  <string name="mediaCount" tools:keep="@string/mediaCount">%s medias</string>
  <string name="get_started" tools:keep="@string/get_started">Get started</string>
  <string name="download_books">Download books</string>
  <string name="humankind_knowledge" tools:keep="@string/humankind_knowledge">Humankind\’s knowledge, on your phone.</string>
  <string name="welcome_to_the_family" tools:keep="@string/welcome_to_the_family">Welcome to the family</string>
  <string name="save_books_offline" tools:keep="@string/save_books_offline">Save books offline</string>
  <string name="download_books_message" tools:keep="@string/download_books_message">Download books and read wherever you are.</string>
  <string name="save_books_in_desired_storage">Save books in desired storage</string>
  <string name="storage_location_hint">You can choose your preferred storage location, either SD card or internal storage, for downloading ZIM files from the Settings screen.</string>
  <string name="unable_to_add_to_bookmarks">Unable to add to bookmarks</string>
  <string name="go_to_previous_page">Go to previous page</string>
  <string name="go_to_next_page">Go to next page</string>
  <string name="table_of_contents">Table of contents</string>
  <string name="select_language" tools:keep="@string/select_language">Select language</string>
  <string name="save_languages" tools:keep="@string/save_languages">Save languages</string>
  <string name="all_languages" tools:keep="@string/all_languages">All languages</string>
  <string name="no_language_available" tools:keep="@string/no_language_available">No languages available</string>
  <string name="expand">Expand</string>
  <string name="history">History</string>
  <string name="history_from_current_book">View History From All Books</string>
...
  <string name="donation_dialog_title">Donate Today</string>
  <string name="donation_dialog_description">%s needs your help.</string>
  <string name="make_donation">Make a donation</string>
  <string name="resuming_state">Resuming</string>
  <string name="downloading_state">Downloading</string>
  <string name="download_failed_state">Failed</string>
  <string name="searchview_description_clear">Clear query</string>
  <string name="do_you_mean">Do you mean:</string>
  <string name="suggested_search_icon_description">Tap to use this suggestion and automatically correct your search</string>
  <string name="file_system_scan_dialog_title">Scan storage for books?</string>
  <string name="file_system_scan_dialog_message">Kiwix will scan your device storage and list the available books here.</string>
  <string name="download_timeout_resume_message">Android’s background download has timed-out. Do you want to resume?</string>
  <string name="validate_zim_files">Validate ZIM files</string>
...
