<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:minHeight="64dp">

  <CheckBox
    android:id="@+id/item_language_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/item_language_name"
    style="@style/list_item_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:alpha="0.90"
    app:layout_constraintBottom_toTopOf="@id/item_language_localized_name"
    app:layout_constraintStart_toEndOf="@id/item_language_checkbox"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed"
    tools:text="English" />

  <TextView
    android:id="@+id/item_language_localized_name"
    style="@style/list_item_body"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alpha="0.63"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="@id/item_language_name"
    app:layout_constraintTop_toBottomOf="@id/item_language_name"
    tools:text="English" />

  <TextView
    android:id="@+id/item_language_books_count"
    style="@style/list_item_body"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:alpha="0.63"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="9 books" />

  <View
    android:id="@+id/item_language_clickable_area"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="?selectableItemBackground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
